--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "del": "^2.2.2",
     "eslint": "^3.19.0",
     "fastclick": "^1.0.6",
+    "gsap": "^1.20.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
